--- a/www/views/entity_list/Gene/oncoprint.haml
+++ b/www/views/entity_list/Gene/oncoprint.haml
@@ -9,7 +9,7 @@
   :markdown
 
     This is simple HTML-based implementation of the oncoprint plot provided by Zuguang Gu in
-    [ComplexHeatmap]:(https://bioconductor.org/packages/devel/bioc/vignettes/ComplexHeatmap/inst/doc/s8.oncoprint.html)
+    [ComplexHeatmap](https://bioconductor.org/packages/devel/bioc/vignettes/ComplexHeatmap/inst/doc/s8.oncoprint.html)
 
 
 = action_card_render action_card do
