--- a/www/views/tools/protein_tool/PCAWG_tab.haml
+++ b/www/views/tools/protein_tool/PCAWG_tab.haml
@@ -54,10 +54,9 @@
     var color = 'red'
     var abbr_colors = #{PCAWG.color_palette.tsv.to_json}
 
-    $.ajax({
+    rbbt.ajax({
       url: url,
       success: function(data){
-        data = JSON.parse(data);
         var change_positions_abbr = {};
         var change_counts = {}
 
