--- a/www/views/tools/protein_tool/PCAWG_tab.haml
+++ b/www/views/tools/protein_tool/PCAWG_tab.haml
@@ -9,10 +9,12 @@
 - donor_changes = TSV.setup({}, :key_field => PCAWG::DONOR_FIELD, :fields => ["Change"], :type => :flat, :namespace => PCAWG.organism)
 
 - gene = protein.gene
-- incidence = Study.setup("PCAWG").mi_incidence(:job).produce.path.tsv :grep => protein
+-# incidence = Study.setup("PCAWG").mi_incidence(:job).produce.path.tsv :grep => protein
+- incidence = Study.setup("PCAWG").mi_incidence
 - incidence.each do |mi,donors|
   - next unless mi =~ /ENSP/
   - p, change = mi.split(":")
+  - next unless p == protein
   - next if change =~ /([A-Z]):([A-Z*])$/ and $1 == $2
   - donors.flatten.each do |donor|
     - donor_changes[donor] ||= []
